--- a/Week-2/musician/index.html
+++ b/Week-2/musician/index.html
@@ -6,16 +6,16 @@
     <title>Musician</title>
 </head>
 <body>
-    <head>The AllMan Brothers Band</head>
-    <main>
-        American rock band whose bluesy, jam-oriented sound helped spark the Southern rock movement of the 1970s and set the stage for several generations of roots-oriented improvisational rock bands.
+    <header><h1>AllMan Brothers Band Page</h1></header>
+    <main style="width: 15cm; font-size: 1.2rem; margin-bottom: 1.5rem;">
+        American rock band whose bluesy, jam-oriented sound helped spark the Southern rock movement of the <span style="color: blue;">1970s</span> and set the stage for several generations of roots-oriented improvisational rock bands.
     </main>
-    <section>
-        <a href="https://www.britannica.com/topic/the-Allman-Brothers-Band">Visit There Page</a>
+    <section style="font-weight: bold; margin-bottom: 1.5rem;">
+        <a href="https://www.britannica.com/topic/the-Allman-Brothers-Band">Visit There Page</a><br>
         <a href="wikipedia.com">Read more about this band</a>
     </section>
 
-    <footer>
+    <footer style="font-size: 2rem;">
         Fan webpage AllMan Brothers
     </footer>
 </body>
